--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/image": "1.9.0",
+    "gsap": "^3.12.7",
     "nuxt": "^3.15.4",
     "vue": "latest",
     "vue-router": "latest"
