--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxt/image": "1.9.0",
     "gsap": "^3.12.7",
     "nuxt": "^3.15.4",
+    "split-type": "^0.3.4",
     "vue": "latest",
     "vue-router": "latest"
   },
