--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@nuxt/image": "1.9.0",
+    "@nuxtjs/sanity": "^1.13.3",
+    "@sanity/image-url": "^1.1.0",
     "gsap": "^3.12.7",
     "nuxt": "^3.15.4",
+    "nuxt-locomotive-scroll": "^0.0.1",
     "split-type": "^0.3.4",
     "vue": "latest",
     "vue-router": "latest"
