--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxt/image": "1.9.0",
     "@nuxtjs/sanity": "^1.13.3",
     "@sanity/image-url": "^1.1.0",
+    "date-fns": "^4.1.0",
     "gsap": "^3.12.7",
     "nuxt": "^3.15.4",
     "nuxt-locomotive-scroll": "^0.0.1",
