--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@nuxt/image": "1.9.0",
     "@nuxtjs/sanity": "^1.13.3",
     "@sanity/image-url": "^1.1.0",
+    "@studio-freight/lenis": "^1.0.42",
     "date-fns": "^4.1.0",
     "gsap": "^3.12.7",
+    "lenis": "^1.2.3",
+    "mitt": "^3.0.1",
     "nuxt": "^3.15.4",
     "nuxt-locomotive-scroll": "^0.0.1",
     "split-type": "^0.3.4",
