--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nuxt": "^3.15.4",
     "nuxt-locomotive-scroll": "^0.0.1",
     "split-type": "^0.3.4",
+    "swiper": "^11.2.6",
     "vue": "latest",
     "vue-router": "latest"
   },
