--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxt/image": "1.9.0",
+    "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/sanity": "^1.13.3",
     "@sanity/image-url": "^1.1.0",
     "@studio-freight/lenis": "^1.0.42",
